--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
